Changes for 1.7.0.3
* Added an option to turn off the end of turn report, into the game menu bar. (veqryn)

* Created new engine preference option to set the maximum memory used for triplea, for joining, hosting, and also an option to have triplea always restart with higher memory maximum. (veqryn)

* Created new option in engine preferences to show engine log console, and also had the console show current memory usage. (veqryn)

* Figuring out some user's Java jvm's and/or the JRE included with triplea, only allow up to xmx 1024mb of memory maximum, and that the program completely fails when going over this limit, often causing the user to be unable to join or host games online. (veqryn & diaz)

* Fixing some lock not held errors. (veqryn)

* Fixed bug causing triggered notifications to not use local images when shown on a client computer. (veqryn)

* Not allowing scrambling question when only and SBR raid is in a territory and scramble to SBR is turned off. (veqryn)

* Fixed bug causing Territory Effects to not be applied at all, ever. Also fixed possible issue with 'choose best roll' in low luck. (veqryn)

* Fixed bug causing national objectives which rewarded players on a per-territory basis using the "each" modifier to not work. (veqryn)

* Fixed bug causing paratrooping land units who's air transports were hit by AA fire to not be removed from the battle. (veqryn)

* Fixed possible null pointer in color chooser for color property, which occurred when chosing the color for map text. (veqryn)


Changes for 1.7.0.1
* New attachment properties for Triggers, Politics, and User Actions: "chanceIncrementOnFailure" and "chanceDecrementOnSuccess" which will modify the "chance" value. (veqryn)

* Fixing fuelCost to not be charged for units in transports. (veqryn)

* Major changes to both the map and the placements and the rules for "Great War" world war one game. (veqryn)
