@@ -210,11 +210,11 @@ public class MoveValidator
 	{
 		if (getEditMode(data))
 			return result;
-		final ResourceCollection fuelCost = Route.getMovementCharge(units, route);
-		
+		if (!games.strategy.triplea.Properties.getUseFuelCost(data))
+			return result;
+		final ResourceCollection fuelCost = Route.getMovementFuelCostCharge(units, route, player, data, route.someMatch(MovePerformer.getMustFightThroughMatch(player, data)));
 		if (player.getResources().has(fuelCost.getResourcesCopy()))
 			return result;
-		
 		return result.setErrorReturnResult("Not enough resources to perform this move, you need: " + fuelCost + " for this move");
 	}
 	
@@ -1618,7 +1618,7 @@ public class MoveValidator
 		return mapping;
 	}
 	
-	private static Collection<Unit> getCanCarry(final Unit carrier, final Collection<Unit> selectFrom)
+	public static Collection<Unit> getCanCarry(final Unit carrier, final Collection<Unit> selectFrom)
 	{
 		final UnitAttachment ua = UnitAttachment.get(carrier.getUnitType());
 		final Collection<Unit> canCarry = new ArrayList<Unit>();
